--- a/notebooks/02_modeling.ipynb
+++ b/notebooks/02_modeling.ipynb
@@ -5,12 +5,12 @@
    "id": "199df0f5",
    "metadata": {},
    "source": [
-    "# Diabetes prediction Modeling"
+    "# Diabetes Prediction (Decision Tree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "16bb5996",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,13 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
     "from sklearn import tree\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, ConfusionMatrixDisplay"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
+    "from pickle import dump"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "fff72915",
    "metadata": {},
    "outputs": [
@@ -144,7 +145,7 @@
        "4                     2.288   33     diabetes  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "8a00fe9a",
    "metadata": {},
    "outputs": [
@@ -167,7 +168,7 @@
        "((691, 9), (77, 9))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "dfa9379c",
    "metadata": {},
    "outputs": [],
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "dce119e1",
    "metadata": {},
    "outputs": [],
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "3176a2fd",
    "metadata": {},
    "outputs": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "f677b50c",
    "metadata": {},
    "outputs": [
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "07d6fc38",
    "metadata": {},
    "outputs": [
@@ -335,7 +336,7 @@
        " 'min_samples_split': 2}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "39a49410",
    "metadata": {},
    "outputs": [
@@ -424,6 +425,18 @@
    "metadata": {},
    "source": [
     "This optimized model improves 0.23 points in recall in comparison with the latest one. It also has an improved accuracy of 0.79. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6658b29e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model\n",
+    "dump(tree_clf, open(\"../models/decision_tree_clasifier_raw.sav\", \"wb\")) \n",
+    "dump(tree_clf_cv, open(\"../models/decision_tree_clasifier_optimized.sav\", \"wb\"))"
    ]
   }
  ],
