Update random forest notebook

--- a/notebooks/03_modeling_rforest.ipynb
+++ b/notebooks/03_modeling_rforest.ipynb
@@ -244,6 +244,18 @@
     "\n",
     "For the *no_diabetes* class, recall declined slightly compared to the raw model, however, the gain in precission balanced its performance, keeping the F1 score steady at 0.85."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1b7dbf0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save models\n",
+    "dump(rforest, open('../models/rforest_model_raw.sav', 'wb'))\n",
+    "dump(rforest_cv, open('../models/rforest_tuned_model.sav', 'wb'))"
+   ]
   }
  ],
  "metadata": {
